--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,116 @@
 body {
     margin: 0;
-    background: goldenrod;
+    background: aliceblue;
     text-align: center;
+}
+
+
+
+
+
+header {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #24252A;
+}
+li, a, button {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    color: #edf0f1;
+    text-decoration: none;
+}
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 5%;
+}
+.logo {
+    cursor: pointer;
+}
+.nav-links {
+    list-style: none;
+}
+.nav-links li {
+    display: inline-block;
+    padding: 0px 20px;
+}
+.nav-links li a {
+    transition: all 0.3s ease 0s;
+}
+.nav-links li a:hover {
+    color: #0088a9;
+}
+button {
+    padding: 9px 24px; 
+    background-color: rgba(0, 136, 169, 1);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+button:hover {
+    background-color: rgba(0, 136, 169, 0.8);
+}
+
+
+
+
+
+
+
+
+
+.website-heading {
+    font-family:Arial;
+    margin-top: 20px;
+}
+.linkedin {
+    background-color: rgb(10, 102, 194);
+    color: aliceblue;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-weight: bold;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-right: 10px;
+    transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
+}
+.linkedin:hover {
+    background-color: aliceblue;
+    color: rgb(10, 102, 194);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+.github {
+    background-color: rgb(22, 14, 43);
+    color: aliceblue;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-weight: bold;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
+}
+.github:hover {
+    background-color: aliceblue;
+    color: rgb(22, 14, 43);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+
+}
+.section-title {
+    font-family:Helvetica;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.button-container {
+    display: inline-flex;
 }
