--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,8 @@ body {
     margin: 0;
     background: aliceblue;
     text-align: center;
+    font-family: Verdana;
 }
-
-
 
 
 
@@ -29,11 +28,11 @@ header {
     align-items: center;
     padding: 20px 5%;
 }
-.logo {
+/*.logo {
     cursor: pointer;
     height: 50px;
     width: auto;
-}
+}*/
 .word-logo {
     padding-left: 0px;
     font-size: 30px;
@@ -65,6 +64,14 @@ button:hover {
 }
 
 
+a.current {
+    /*color: #ff105e;*/
+    background-color: #3e404a;
+    padding: 8px 12px;
+    border-radius: 50px;
+}
+
+
 
 .menu-button {
     display: none;
@@ -80,7 +87,7 @@ button:hover {
     border-radius: 3px;
     background-color: aliceblue;
 }
-@media (max-width: 850px) {
+@media (max-width: 915px) {
     .menu-button {
         display: flex;
         transition-duration: 0.4s;
@@ -100,12 +107,15 @@ button:hover {
     }
     .nav-links li {
         text-align: left;
-        padding: 5px 0px;
+        padding: 8px 0px;
+    }
+    .nav-links li a {
+        padding: 8px 10px;
     }
     .nav-links.active {
         display: flex;
         margin-top: 40px;
-        padding-bottom: 20px;
+        padding-bottom: 5px;
         left: 0px;
         width: 100%;
         background-color: #24252aec;
@@ -115,15 +125,16 @@ button:hover {
         transition-duration: 0.4s;
     }   
     .menu-button.close .bar:nth-child(1) {
-        transform: rotate(45deg) translate(6px, 7px);
+        transform: rotate(45deg) translate(7px, 7px);
     }
     .menu-button.close .bar:nth-child(2) {
         opacity: 0;
     }
     .menu-button.close .bar:nth-child(3) {
-        transform: rotate(-45deg) translate(8px, -7px);
+        transform: rotate(-45deg) translate(7px, -7px);
     }
 }
+
 
 
 
@@ -139,7 +150,6 @@ button:hover {
     color: aliceblue;
     border: none;
     border-radius: 3px;
-    cursor: pointer;
     font-weight: bold;
     padding-left: 10px;
     padding-right: 10px;
@@ -158,7 +168,6 @@ button:hover {
     color: aliceblue;
     border: none;
     border-radius: 3px;
-    cursor: pointer;
     font-weight: bold;
     padding-left: 10px;
     padding-right: 10px;
